* No longer supports focusHandler() callback prop. If this is needed in the future consider adding a handler that receives both focus state and active state (whether dropdown shown). \n* Added resultsContainer div to give more flexibility in overriding css style. \n* Added blurOnTouchStart prop (defaults to false) which when set to true will always trigger blur() on input onmousedown. This gets around an annoying bug on phonegap bundled iOS apps where the input, after being blurred naturally, will no longer display the input caret when focused again. Enable if seeing this issue. \n* Fixed dropdown results not rendering if not including a resultsId prop

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,13 +32,22 @@
     right: 1em;
 }
 
+.resultsContainer {
+    position: absolute;
+    z-index: 9997;
+    width: 100%;
+    margin: 0;
+    background-color:red;
+}
+
 ul.results{
-    background-color: #fff;
     position: absolute;
     z-index: 9999;
-    width: 100%;
-    margin-top: 0;
+    top:0;
+    width:100%;
+    margin: 0;
     padding: 0;
+    background-color: #fff;
     border: 1px solid #ccc;
     border-top: none;
     list-style-type: none;
